# ws_sensor_combined

./: .gitmodules  README.md  frames_2025-10-13_14.15.36.gv  frames_2025-10-13_14.22.00.gv  frames_2025-10-13_14.39.44.gv  frames_2025-10-13_14.41.46.gv  frames_2025-10-13_15.49.47.gv  frames_2025-10-13_15.53.44.gv  frames_2025-10-13_16.09.25.gv  frames_2025-10-13_16.12.31.gv  frames_2025-10-13_16.48.03.gv  frames_2025-10-23_22.22.26.gv  warehouse.sdf
install/: local_setup.sh  setup.sh
install/bt_uav_controller/lib/bt_uav_controller/: bt_uav_controller_node  takeoff_action_server
install/bt_uav_controller/share/bt_uav_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/px4_offboard/lib/px4_offboard/: control  offboard_control  processes  velocity_control  visualizer
install/px4_offboard/share/px4_offboard/: offboard_velocity_control.launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/px4_ros_com/include/px4_ros_com/: frame_transforms.h
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control.py  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/px4_ros_com/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/x500_bridge/lib/x500_bridge/: cmd_vel_bridge  cmd_vel_to_offboard  odom_bridge  offboard_move_forward  px4_offboard_arm_helper  px4_offboard_init  scan_relay
install/x500_bridge/share/x500_bridge/: package.bash  package.dsv  (+4 more)
log/: latest_build
src/bt_uav_controller/: CMakeLists.txt  package.xml  untitled_v3_1.xml
src/bt_uav_controller/action/: Takeoff.action
src/bt_uav_controller/include/: untitled_v3_1.xml
src/bt_uav_controller/include/bt_uav_controller/: WaitForGoalReachedBT.hpp
src/bt_uav_controller/include/bt_uav_ctrl/: WaitForGoalReachedBT.hpp  bt_uav_controller.btproj  px4_state_monitor.hpp  untitled_v3_1.xml
src/bt_uav_controller/src/: bt_uav_controller.cpp  px4_state_monitor.cpp  takeoff_action_server.cpp
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/x500_bridge/: package.xml  setup.cfg  setup.py
src/x500_bridge/config/: ekf.yaml
src/x500_bridge/launch/: slam_with_bridge.launch.py  slam_with_px4.launch.py
src/x500_bridge/rviz/: x500_slam.rviz
src/x500_bridge/urdf/: x500_lidar.urdf.xacro
src/x500_bridge/x500_bridge/: odom_bridge.py  scan_relay.py
src/x500_navigation/: package.xml  setup.cfg  setup.py
src/x500_navigation/behavior_trees/: navigate_uav_mission.xml  simple_uav_test.xml
src/x500_navigation/launch/: x500_nav_bringup.launch.py
src/x500_navigation/maps/: navigation_map2.yaml  navigation_map3.pgm  navigation_map3.yaml  navigation_map4.pgm  navigation_map4.yaml  navigation_map6.pgm  navigation_map6.yaml  navigation_map7.pgm  navigation_map7.yaml
src/x500_navigation/params/: nav2_params.yaml
src/x500_navigation/rviz/: x500_nav.rviz
src/x500_navigation/scripts/: cmd_vel_to_offboard.py  odom_bridge_2d.py
(+4372 files in other folders)
